--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "build": "npm run clean && npm run build:commonjs",
     "lint": "eslint src --ext .js",
     "test": "jest",
-    "watch": "jest --watch",
+    "watch": "jest --watchAll --runInBand",
     "coverage": "jest --coverage"
   },
   "repository": {
@@ -28,12 +28,17 @@
     "url": "https://github.com/kdcsoftware/nodejs-boilerplate/issues"
   },
   "homepage": "https://github.com/kdcsoftware/nodejs-boilerplate#readme",
-  "dependencies": {},
+  "dependencies": {
+    "execa": "^4.0.1",
+    "fs-extra": "^9.0.0",
+    "yargs": "^15.3.1"
+  },
   "devDependencies": {
     "@babel/cli": "^7.8.4",
     "@babel/core": "^7.9.6",
     "@babel/plugin-transform-runtime": "^7.9.6",
     "@babel/preset-env": "^7.9.6",
+    "@types/jest": "^25.2.1",
     "babel-eslint": "^10.1.0",
     "babel-jest": "^26.0.1",
     "eslint": "^7.0.0",
