--- a/package.json
+++ b/package.json
@@ -29,9 +29,9 @@
   },
   "homepage": "https://github.com/kdcsoftware/create-boilerplate#readme",
   "dependencies": {
+    "commander": "^5.1.0",
     "execa": "^4.0.1",
-    "fs-extra": "^9.0.0",
-    "yargs": "^15.3.1"
+    "fs-extra": "^9.0.0"
   },
   "devDependencies": {
     "@babel/cli": "^7.8.4",
