--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "@babel/core": "^7.9.6",
     "@babel/plugin-transform-runtime": "^7.9.6",
     "@babel/preset-env": "^7.9.6",
+    "@babel/runtime": "^7.9.6",
     "@types/jest": "^25.2.1",
     "babel-eslint": "^10.1.0",
     "babel-jest": "^26.0.1",
