--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.2",
   "description": "NodeJs boilerplate",
   "main": "lib/index.js",
-  "bin": "./bin/kdc-create-nodejs.js",
+  "bin": "./cli.js",
   "scripts": {
     "build:commonjs": "babel src --out-dir lib",
     "clean": "rm -fR lib",
