--- a/package.json
+++ b/package.json
@@ -29,7 +29,9 @@
   },
   "homepage": "https://github.com/kdcsoftware/create-boilerplate#readme",
   "dependencies": {
+    "chalk": "^4.0.0",
     "commander": "^5.1.0",
+    "envinfo": "^7.5.1",
     "execa": "^4.0.1",
     "fs-extra": "^9.0.0"
   },
