--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "commander": "^5.1.0",
     "envinfo": "^7.5.1",
     "execa": "^4.0.1",
+    "figlet": "^1.4.0",
     "fs-extra": "^9.0.0"
   },
   "devDependencies": {
