--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -14,6 +14,8 @@ jobs:
       - uses: actions/setup-node@v1
         with:
           node-version: '12.x'
+      - run: git config --global user.email ian@kdcsoftware.com
+      - run: git config --global user.name Ian
       - run: npm ci
       - run: npm run lint
       - run: npm run coverage
