--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -13,6 +13,8 @@ jobs:
         with:
           node-version: '12.x'
           registry-url: https://registry.npmjs.org/
+      - run: git config --global user.email ian@kdcsoftware.com
+      - run: git config --global user.name Ian
       - run: npm ci
       - run: npm test
       - run: npm run lint
